# open-idotmatrix

./: .gitignore  CONTRIBUTING.md  LICENSE  Makefile  README.md  SECURITY.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
docs/: APPLICATIONS.md  ARCHITECTURE.md  CODEX_BRIEF.md  HARDWARE_REPORT_TEMPLATE.md  LINUX_BLUETOOTH.md  PROTOCOL.md  REVERSE_ENGINEERING.md  ROADMAP.md  SIMULATOR.md  TEST_PLAN.md  UNKNOWN_BYTES.md
examples/: decode_packet.py  hardware_smoke_test.py  hello_text.py  simulator_demo.py
open_idotmatrix/: __init__.py  cli.py  constants.py  device.py  exceptions.py  framebuffer.py  game_of_life.py  gif.py  outputs.py  playable_games.py  profile.py  protocol.py  qt_app.py  qt_window.py  renderer.py  runtime.py  session.py  simulator.py  testing.py  text.py  transport.py  types.py
scripts/: create_demo_gif.py
tests/: test_cli.py  test_framebuffer.py  test_game_of_life.py  test_gif_ack_policy.py  test_gif_protocol.py  test_outputs_runtime.py  test_playable_games.py  test_profile.py  test_protocol_common.py  test_renderer_device.py  test_simulator.py  test_text_protocol.py  test_transport.py
